# workanother.day

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  compose.yaml  invoice_example.html  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: input.css  output.css
wad/: apps.py  calendar_utils.py  countries.py  ical.py  middleware.py  models.py  services.py  urls.py  views.py
wad/management/commands/: cleanup_guests.py
wad/migrations/: 0001_initial.py  0002_calendartoken.py
wad/templates/wad/: _day_cell.html  _holiday_comparison.html  _monthly_summary.html  base.html  calendar.html  contract_create.html  contract_edit.html  contracts.html  invoice.html  landing.html  login.html  save_account.html
wad/templatetags/: wad_filters.py
wad/tests/: test_calendar_utils.py  test_ical.py  test_models.py  test_services.py  test_views.py
